force-app/main/default/objects/General_Exam__c/General_Exam__c.object-meta.xml
<CustomObject>
    <label>General Exam</label>
    <nameField>
        <label>General Exam Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Exams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>