force-app/main/default/objects/General_Exam__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>General Exams</relationshipLabel>
    <relationshipName>General_Exams</relationshipName>
    <type>Lookup</type>
</CustomField>